[workspace]
members = ["crates/anytest-derive"]

[package]
name = "anytest"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
regex = "1.10.3"
anytest-derive = { path = "crates/anytest-derive" }
log = "0.4.21"
smart-default = "0.7.1"
rev_buf_reader = "0.3.0"
