[package]
name = "anytest-derive"
version = "0.1.0"
authors = ["Tim Masliuchenko"]
edition = "2021"
description = "anytest macros"
readme = false
repository = "https://github.com/timfjord/anytest-cli/tree/main/crates/anytest-derive"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
regex = "1.10.4"
syn = "2.0.55"
